force-app/main/default/objects/Cosecha__c/Cosecha__c.object-meta.xml
<CustomObject>
    <label>Cosecha</label>
    <nameField>
        <label>Cosecha Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cosechas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>