force-app/main/default/objects/Cosecha__c/fields/Fecha_cosecha__c.field-meta.xml
<CustomField>
    <fullName>Fecha_cosecha__c</fullName>
    <label>Fecha cosecha</label>
    <type>Date</type>
</CustomField>