force-app/main/default/objects/Cosecha__c/fields/Ignia_ID__c.field-meta.xml
<CustomField>
    <fullName>Ignia_ID__c</fullName>
    <externalId>true</externalId>
    <label>Ignia ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>