force-app/main/default/objects/Cosecha__c/fields/Lote__c.field-meta.xml
<CustomField>
    <fullName>Lote__c</fullName>
    <label>Lote</label>
    <referenceTo>Lote__c</referenceTo>
    <relationshipLabel>Cosechas</relationshipLabel>
    <relationshipName>Cosechas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>