force-app/main/default/objects/Cosecha__c/fields/Peso_Kg__c.field-meta.xml
<CustomField>
    <fullName>Peso_Kg__c</fullName>
    <label>Peso Kg</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>